--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -541,7 +541,7 @@
                 formControlName="description"
                 placeholder="{{ 'poll.details.description.description' | translate }}"
                 type="text"
-                aria-describedby="maxLength-description"
+                aria-describedby="description-too-long"
               >
             </div>
             @if (!!getDescriptionByIndex(i).invalid) {
