--- a/src/app/shared/components/ad-icons/ad-icons.component.html
+++ b/src/app/shared/components/ad-icons/ad-icons.component.html
@@ -1,14 +1,14 @@
 <div class="row g-0 justify-content-between" data-id="adIcons">
   <div class="col">
     <img alt="Planung" src="assets/search.svg">
-    <h3 class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.planning' | translate }}</h3>
+    <span class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.planning' | translate }}</span>
   </div>
   <div class="col">
     <img alt="Sicherheit" src="assets/lock.svg">
-    <h3 class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.security' | translate }}</h3>
+    <span class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.security' | translate }}</span>
   </div>
   <div class="col">
     <img alt="Vernetzung" src="assets/calendar_network.svg">
-    <h3 class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.networking' | translate }}</h3>
+    <span class="text-center d-none d-lg-block text-bold circle-text">{{ 'home.networking' | translate }}</span>
   </div>
 </div>
