fix: remove `aria-hidden` attribute
Firefox ignores this element and screen readers can't interact with the
form.

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -41,8 +41,7 @@
             <!-- mobile table -->
             <app-mobile-poll-table></app-mobile-poll-table>
             <!-- desktop table -->
-            <table aria-hidden="true"
-                   class="table table-striped table-hover mb-0 bordered poll-table d-none d-lg-block">
+            <table class="table table-striped table-hover mb-0 bordered poll-table d-none d-lg-block">
               <!-- first row contains the suggested dates -->
               <thead class="h-100" data-id="tableHead">
               <tr class="h-100">
