feat: add title for edit button
Now screenreaders read the title instead of the img alt text.
- hide img for aria
- add translation

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -237,8 +237,9 @@
                                 class="btn btn-transparent p-0 border-0"
                                 id="editButton-{{index}}"
                                 type="button"
+                                title="{{ 'poll.editParticipant' | translate}}"
                               >
-                                <img alt="pencil" class="icon icon-edit" src="assets/edit.svg"/>
+                                <img aria-hidden="true" alt="pencil" class="icon icon-edit" src="assets/edit.svg"/>
                               </button>
                             </span>
                           }
