refactor: improve total participants number for double digits
- center img horizontally

--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -240,13 +240,9 @@ button.btn-with-image {
   margin-bottom: 0;
 }
 
-.voting-status-summary-image {
-  margin-right: 4px;
-
-  img {
-    width: $poll-option-width-small;
-    height: $poll-option-width-small;
-  }
+.voting-status-summary-image img {
+  width: $poll-option-width-small;
+  height: $poll-option-width-small;
 }
 
 .poll-summary-row {
