--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -108,11 +108,13 @@
               </div>
             </td>
             <td class="total-participants">
-              <div class="d-inline-block voting-status-summary-image text-center">
-                <img alt="checkmark" aria-hidden="true" src="assets/status_accepted.svg">
-              </div>
-              <div class="font-weight-bold d-inline-block voting-status-summary-number">
-                {{ formHelper.getNumberOfAcceptedVotingsBySuggestedDate(date.suggestedDateId) }}
+              <div class="mx-4 d-flex justify-content-between align-items-center">
+                <div class="voting-status-summary-image">
+                  <img alt="checkmark" aria-hidden="true" src="assets/status_accepted.svg">
+                </div>
+                <div class="font-weight-bold voting-status-summary-number mx-1">
+                  {{ formHelper.getNumberOfAcceptedVotingsBySuggestedDate(date.suggestedDateId) }}
+                </div>
               </div>
             </td>
             <td class="poll-options pr-2">
