--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -33,10 +33,13 @@
 
 .poll-table td.total-participants {
   padding: 0;
-  width: 60px;
 }
 
 .poll-table.mobile td.poll-options > img {
   margin-left: auto;
   margin-right: 1rem;
+}
+
+.voting-status-summary-image img {
+  display: block;
 }
