style: update formatting

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -32,7 +32,8 @@
                 required
                 class="form-control"
                 data-id="titleInput"
-                formControlName="title" id="title"
+                formControlName="title"
+                id="title"
                 placeholder="{{ 'poll.title.title' | translate }}"
                 type="text"
                 aria-describedby="required-title invalid-title maxLength-title">
