--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -7,7 +7,8 @@
     id="combo-input"
     class="combo-input"
     role="combobox"
-    (click)="setMenuState(true, false)"
+    (click)="toggleMenuState(false)"
+    (blur)="onBlur($event)"
     (keydown)="onKeyDown($event)"
     [attr.aria-expanded]="isOpen"
     [attr.aria-activedescendant]="'combo-option-' + activeIndex"
@@ -18,7 +19,15 @@
   >
     {{ this.options[activeIndex].value }}
   </div>
-  <div #listbox class="combo-menu" role="listbox" id="listbox" tabindex="-1" aria-labelledby="combo-label">
+  <div
+    #listbox
+    class="combo-menu"
+    role="listbox"
+    id="listbox"
+    tabindex="-1"
+    aria-labelledby="combo-label"
+    (focusout)="onBlur($event)"
+  >
     @for (option of options; track option; let i = $index) {
       <div
         #option
@@ -27,7 +36,6 @@
         class="combo-option"
         [ngClass]="{'option-current': i === activeIndex}"
         (click)="selectOption(i)"
-        (mousedown)="onOptionMouseDown($event)"
         [attr.aria-selected]="i === activeIndex"
       >
         {{ option.value }}
