--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -4,7 +4,7 @@
   </div>
   <div
     #combobox
-    class="combobox"
+    class="combobox btn px-2 d-inline-flex justify-content-between align-items-center"
     role="combobox"
     (click)="toggleMenuState(false)"
     (blur)="onBlur($event)"
@@ -20,7 +20,7 @@
   </div>
   <div
     #listbox
-    class="combo-menu"
+    class="listbox font-small"
     role="listbox"
     id="listbox"
     tabindex="-1"
