--- a/src/app/shared/components/combobox/combobox.component.scss
+++ b/src/app/shared/components/combobox/combobox.component.scss
@@ -1,71 +1,50 @@
+@import "src/default";
+
 .combo {
-  display: block;
-  margin-bottom: 1.5em;
+  display: inline-block;
   max-width: 400px;
   position: relative;
-
-  &::after {
-    border-bottom: 2px solid rgb(0 0 0 / 75%);
-    border-right: 2px solid rgb(0 0 0 / 75%);
-    content: "";
-    display: block;
-    height: 12px;
-    pointer-events: none;
-    position: absolute;
-    right: 16px;
-    top: 65%;
-    transform: translate(0, -65%) rotate(45deg);
-    width: 12px;
-  }
 }
 
 .combobox {
-  background-color: #f5f5f5;
-  border: 2px solid rgb(0 0 0 / 75%);
-  border-radius: 4px;
-  display: block;
-  font-size: 1em;
-  min-height: calc(1.4em + 26px);
-  padding: 12px 16px 14px;
+  @include focus-outline;
+
+  padding: 4px;
   text-align: left;
-  width: 100%;
+  width: 3em;
 
-  &:focus {
-    border-color: #0067b8;
-    box-shadow: 0 0 4px 2px #0067b8;
-    outline: 4px solid transparent;
+  &::after {
+    content: '';
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+  }
+
+  &.open::after {
+    transform: rotate(180deg);
   }
 }
 
-.open {
-  .combobox {
-    border-radius: 4px 4px 0 0;
-  }
-
-  .combo-menu {
-    display: block;
-  }
-}
-
-.combo-label {
+.open .listbox {
   display: block;
-  font-weight: 100;
-  margin-bottom: 0.25em;
-  font-size: 1.2em;
 }
 
-.combo-menu {
-  background-color: #f5f5f5;
-  border: 1px solid rgb(0 0 0 / 75%);
-  border-radius: 0 0 4px 4px;
+.listbox {
+  z-index: 1;
   display: none;
-  max-height: 300px;
-  overflow-y: scroll;
-  left: 0;
+
   position: absolute;
+  right: 0;
   top: 100%;
-  width: 100%;
-  z-index: 100;
+
+  min-width: 150px;
+  max-height: 300px;
+  overflow-y: auto;
+
+  background-color: white;
+  border: 1px solid $dark-gray;
+  border-radius: 5px;
 }
 
 .combo-option {
@@ -76,22 +55,24 @@
   }
 
   &.option-current {
-    outline: 3px solid #0067b8;
-    outline-offset: -3px;
+    outline: lighten($primary, 10%) solid 0.125rem !important;
+    outline-offset: -0.125rem;
   }
 
   &[aria-selected="true"] {
+    background-color: $light-gray;
     padding-right: 30px;
     position: relative;
 
+    // checkmark
     &::after {
       border-bottom: 2px solid #000;
       border-right: 2px solid #000;
-      content: "";
+      content: '';
       height: 16px;
       position: absolute;
       right: 15px;
-      top: 50%;
+      top: 43%;
       transform: translate(0, -50%) rotate(45deg);
       width: 8px;
     }
