--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -1,6 +1,6 @@
 @if (formGroup !== null) {
-  <div class="row">
-    <div class="col d-flex justify-content-center">
+  <div class="row g-1">
+    <div class="col col-4 d-flex justify-content-center">
       <img
         alt=""
         aria-hidden="true"
@@ -8,7 +8,7 @@
         src="assets/status_declined.svg"
       >
     </div>
-    <div class="col d-flex justify-content-center">
+    <div class="col col-4 d-flex justify-content-center">
       <img
         alt=""
         aria-hidden="true"
@@ -16,7 +16,7 @@
         src="assets/status_questionable.svg"
       >
     </div>
-    <div class="col d-flex justify-content-center">
+    <div class="col col-4 d-flex justify-content-center">
       <img
         alt=""
         aria-hidden="true"
@@ -25,8 +25,8 @@
       >
     </div>
   </div>
-  <div [formGroup]="formGroup" class="row mt-1">
-    <div class="col">
+  <div [formGroup]="formGroup" class="row g-1 mt-1">
+    <div class="col col-4">
       <div class="d-flex justify-content-center">
         <input
           class=""
@@ -39,7 +39,7 @@
         >
       </div>
     </div>
-    <div class="col">
+    <div class="col col-4">
       <div class="d-flex justify-content-center">
         <input
           class=""
@@ -53,7 +53,7 @@
         >
       </div>
     </div>
-    <div class="col">
+    <div class="col col-4">
       <div class="d-flex justify-content-center">
         <input
           class=""
