--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -42,6 +42,10 @@
 
 .poll-table td.total-participants {
   padding: 0;
+
+  .voting-status-summary-number {
+    font-size: 1.8rem;
+  }
 }
 
 .poll-table.mobile td.poll-options {
@@ -55,4 +59,17 @@
 
 .voting-status-summary-image img {
   display: block;
+}
+
+@media (max-width: 300px) {
+  .poll-table td.total-participants {
+    .voting-status-summary-number {
+      font-size: 1.35rem;
+    }
+
+    .voting-status-summary-image img {
+      width: $poll-option-width-small * 0.75;
+      height: $poll-option-width-small * 0.75;
+    }
+  }
 }
