refactor: decrease form margin & padding on `sm` display size

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -21,8 +21,8 @@
 }
 @if (formHelper) {
   <form [formGroup]="formHelper.pollForm">
-    <div class="row mx-3">
-      <div class="col">
+    <div class="row mx-md-3 mx-sm-1">
+      <div class="col p-sm-2">
         @if (model) {
           <div class="section-container">
             <div class="pt-2 px-3">
