--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -5,6 +5,7 @@
   <div
     #combobox
     class="combobox btn px-2 d-inline-flex justify-content-between align-items-center"
+    [ngClass]="{'open': isOpen}"
     role="combobox"
     (click)="toggleMenuState(false)"
     (blur)="onBlur($event)"
